# crypto-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.py  crypto_monitor.py  docker-compose.yml  docker-run-once.sh  docker-run.sh  install.sh  pyproject.toml  requirements.txt  run.sh  run_futures_monitor.py  run_tests.py  setup.py  technical_analysis.py  test.py  test_cooldown.py  test_divergence.py  test_futures_monitor.py  test_notification_schedule.py  test_rsi.py  test_rsi_signals.py  test_scheduling.py  test_silent_mode.py  test_simple_cooldown.py  test_simple_monitor.py  test_telegram_alerts.py  test_telegram_rsi.py  test_unified_cooldown.py  update_config.py  update_config_smart.py  watchlist.py
crypto_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: __init__.py  test.ipynb  test.py  test_cooldown.py  test_divergence.py  test_divergence_alert.py  test_futures_monitor.py  test_rsi.py  test_rsi_signals.py  test_scheduling.py  test_simple_cooldown.py  test_telegram_alerts.py  test_telegram_rsi.py  test_unified_cooldown.py
