[project]
name = "crypto-monitor"
version = "1.0.0"
description = "암호화폐 RSI 다이버전스 모니터링 시스템"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "gate-api>=4.23.0",
    "python-telegram-bot>=20.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "ta>=0.10.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=0.19.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910"
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "crypto_monitor",
    "technical_analysis", 
    "update_config",
    "watchlist"
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.urls]
Homepage = "https://github.com/2baek2/crypto-monitor"
Repository = "https://github.com/2baek2/crypto-monitor.git"
Issues = "https://github.com/2baek2/crypto-monitor/issues"

[project.scripts]
crypto-monitor = "crypto_monitor:main"
